# HASY

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTENT  Makefile  README.md  README.txt  create_hasy.py  hasy_tools.py  requirements-dev.in  requirements-dev.txt  requirements-lint.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yaml
hasy/: __init__.py  cli.py  create_hasy.py  hasy_tools.py
hasy/models/: README.md  keras_hasy.py  tflearn_hasy.py
requirements/: ci.in  ci.txt  dev.in  dev.txt  prod.txt
scripts/: README.md  classifier_comp.py  confusable-classes.yml  hasy_tools.py  input_data.py  keras_hasy.py  keras_hasy_cv.py  keras_load_model.py  knn.py  tf_hasy.py  tflearn_hasy.py  tflearn_hasy_cv.py
scripts/experiments/: README.md
scripts/experiments/3-32-m-64-1024-369/: README.md  tf_hasy.py  validation-curve-accuracy-tf-cnn-3-32-m-64-1024-369-relu-2.csv  validation-curve-accuracy-tf-cnn-3-32-m-64-1024-369-relu-4.csv  validation-curve-accuracy-tf-cnn-3-32-m-64-1024-369-relu-6.csv  validation-curve-accuracy-tf-cnn-3-32-m-64-1024-369-relu-7.csv  validation-curve-accuracy-tf-cnn-3-32-m-64-1024-369-relu-8.csv
scripts/experiments/i1-c16-f369/: README.md  cnn-comp.md  tf_hasy.py  validation-curve-accuracy-i1-c16-f369-1.csv  validation-curve-accuracy-i1-c16-f369.csv
scripts/experiments/i1-c3-c3-c3-c3-d0.6-f369/: README.md  cnn-comp.md  tf_hasy.py  validation-curve-accuracy-i1-c3-c3-c3-c3-d0.6-f369-1.csv  validation-curve-accuracy-i1-c3-c3-c3-c3-d0.6-f369-2.csv  (+1 more)
tests/: conftest.py
(+513 files in other folders)
