[metadata]
name = hasy

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.1.1

description = Martins Python Utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility

platforms = Linux

url = https://github.com/MartinThoma/hasy
download_url = https://github.com/MartinThoma/hasy

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >= 3.0

[options.entry_points]
console_scripts =
    hasy = hasy.cli:entry_point

[tool:pytest]
addopts = --cov=./hasy --cov-report html:tests/reports/coverage-html --flake8 --ignore=docs/ --durations=3 --doctest-modules
doctest_encoding = utf-8

[pydocstyle]
ignore = D104, D105, D107, D301, D413, D203, D212, D100, D417
match_dir = hasy

[flake8]
max-line-length = 88
extend-ignore = E203,E501,E231,N806,N803,N802
